adjust styling on bio container to prevent need for horizontal scrolling

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -15,8 +15,11 @@ $instagram-red: #f04752;
 
 
 .bio-container {
-  padding: 5px 150px 5px 150px;
-  // background-color: blue;
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  // padding: 5px 150px 5px 150px;
+  background-color: blue;
   background-color: $instagram-grey-fullscreen;
   // border-width: 1px;
   // border-style: solid;
@@ -25,6 +28,7 @@ $instagram-red: #f04752;
 
 .bio-subcontainer {
   // background-color: green;
+  max-width: 700px;
   display: flex;
   justify-content: space-around;
   align-items: center;
